--- a/cms-service/pom.xml
+++ b/cms-service/pom.xml
@@ -4,15 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.kkyeer.lab</groupId>
-    <artifactId>cms</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
     <parent>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <groupId>org.springframework.boot</groupId>
-        <version>2.2.0.RELEASE</version>
+        <groupId>com.kkyeer.lab</groupId>
+        <artifactId>cms</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <artifactId>cms-service</artifactId>
 
     <dependencies>
         <dependency>
@@ -31,8 +29,48 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <!-- for Spring Data Redis v.2.2.x -->
+            <artifactId>redisson-spring-data-22</artifactId>
+            <version>3.14.1</version>
+        </dependency>
+
+
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.kkyeer.lab</groupId>
+            <artifactId>cms-api</artifactId>
+            <version>${version}</version>
         </dependency>
     </dependencies>
 
