--- a/cms-service/src/main/resources/application.properties
+++ b/cms-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://home.mini:3306/cms
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis-plus.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumOrdinalTypeHandler
