--- a/cms-service/pom.xml
+++ b/cms-service/pom.xml
@@ -67,6 +67,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.75</version>
+        </dependency>
+
+
         <dependency>
             <groupId>com.kkyeer.lab</groupId>
             <artifactId>cms-api</artifactId>
