--- a/provider/src/main/resources/application.properties
+++ b/provider/src/main/resources/application.properties
@@ -4,3 +4,4 @@ dubbo.protocol.name=dubbo
 dubbo.protocol.port=41002
 dubbo.provider.weight=100
 dubbo.registry.address=zookeeper://home.mini:2181
+dubbo.application.name=${spring.application.name}
