--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -2,4 +2,5 @@ server.port=38082
 spring.application.name=DubboConsumer
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=41213
-dubbo.registry.address=zookeeper://localhost:2181
+dubbo.registry.address=zookeeper://home.mini:2181
+dubbo.application.name=${spring.application.name}
