--- a/provider/pom.xml
+++ b/provider/pom.xml
@@ -9,12 +9,22 @@
 	</parent>
 	<artifactId>provider</artifactId>
 	<description>Demo project for Spring Boot</description>
+	<packaging>jar</packaging>
 	
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>
+								repackage
+							</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
