--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>2.2.0.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>2.2.0.RELEASE</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
