test: 测试自动注入的代码
1. 在@Configuration类中定义的bean，如果没有定义BeanName，默认取方法名
2. @Resource和@Autowired注入时，如果没有指定BeanName，优先按变量名匹配，然后是按类型获取

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 a=cc
-spring.main.lazy-initialization=true
+#spring.main.lazy-initialization=true
 cache.enabled=true
 app.name=studySpring
 app.version=1.0
