--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-a=cc
 #spring.main.lazy-initialization=true
-cache.enabled=true
-app.name=studySpring
-app.version=1.0
+spring.application.name=studySpring
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.username=${mysql.username}
+spring.datasource.hikari.password=${mysql.password}
