init: support multiple datasource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,18 @@
-a=cc
-#spring.main.lazy-initialization=true
-cache.enabled=true
-app.name=studySpring
+app.name=spring-mysql-ck-demo
 app.version=1.0
+
+# ck
+spring.datasource.ck.driver-class-name=com.clickhouse.jdbc.ClickHouseDriver
+spring.datasource.ck.jdbc-url=jdbc:clickhouse://127.0.0.1:8123/default
+spring.datasource.ck.username=myuser
+spring.datasource.ck.password=mypassword
+spring.datasource.ck.idle-timeout=200
+spring.datasource.ck.default-pool-size=30
+
+# mysql
+spring.datasource.mysql.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.mysql.jdbc-url=jdbc:mysql://127.0.0.1:3306/default
+spring.datasource.mysql.username=myuser
+spring.datasource.mysql.password=mypassword
+spring.datasource.mysql.idle-timeout=200
+spring.datasource.mysql.default-pool-size=30
